--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,80 @@
+# ===============================
 # Python
+# ===============================
 __pycache__/
 *.py[cod]
 *$py.class
-.venv
+.venv/
 venv/
 ENV/
-.env
+env/
 
-# Node.js
+# Python build
+build/
+dist/
+*.egg-info/
+.eggs/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# ===============================
+# Environment Variables 
+# ===============================
+.env
+.env.*
+!.env.example
+
+# ===============================
+# Node (Frontend)
+# ===============================
 web/node_modules/
 web/dist/
-web/.env
-.eslintcache
+web/dist-ssr/
+web/.vite/
+web/coverage/
 
-# Data & Models (Opsional: jika file >50MB sebaiknya di-ignore)
+# ===============================
+# ML / Data / Models
+# ===============================
 data/
+models/
+*.parquet
+*.pkl
+*.joblib
+*.h5
+*.onnx
 
-# System files
+# If you want specific exceptions:
+# !data/sample_dataset.parquet
+
+# ===============================
+# Logs
+# ===============================
+*.log
+logs/
+
+# ===============================
+# Lint / Cache
+# ===============================
+.eslintcache
+.mypy_cache/
+.pytest_cache/
+
+# ===============================
+# OS Files
+# ===============================
 .DS_Store
 Thumbs.db
 
-# Data Files (Besar & Sensitif)
-data/raw/Flight_Delay.parquet
+# ===============================
+# IDE
+# ===============================
+.vscode/
+.idea/
 
-# Atau, untuk mengabaikan SEMUA file parquet di dalam folder data
-data/**/*.parquet
+# ===============================
+# Testing / Coverage
+# ===============================
+coverage/
+htmlcov/
