--- a/web/.gitignore
+++ b/web/.gitignore
@@ -1,4 +1,6 @@
+# ===============================
 # Logs
+# ===============================
 logs
 *.log
 npm-debug.log*
@@ -7,18 +9,61 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# ===============================
+# Dependencies
+# ===============================
 node_modules
+
+# ===============================
+# Build Output
+# ===============================
 dist
 dist-ssr
-*.local
+build
+coverage
+.vite
+.cache
 
-# Editor directories and files
+# ===============================
+# Environment Files 
+# ===============================
+.env
+.env.*
+!.env.example
+
+# ===============================
+# Local Dev Config
+# ===============================
+*.local
+.vercel
+.netlify
+
+# ===============================
+# Editor / IDE
+# ===============================
 .vscode/*
 !.vscode/extensions.json
 .idea
 .DS_Store
+Thumbs.db
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# ===============================
+# TypeScript
+# ===============================
+*.tsbuildinfo
+
+# ===============================
+# Testing
+# ===============================
+playwright-report
+test-results
+
+# ===============================
+# Misc
+# ===============================
+*.pem
